--- a/seajs-jq.html
+++ b/seajs-jq.html
@@ -11,7 +11,7 @@
 <script src="script/sea-debug.js"></script>
 <script>
     seajs.config({
-        base:'./module',
+        base:'./moduleRequire',
         alias: {
             jquery: 'jquery-1.10.0'
         }
